# qdrant-indexing

./: pyproject.toml  run.sh
src/: indexing.py
